nodeを色分けする

--- a/sample_vis.html
+++ b/sample_vis.html
@@ -18,14 +18,14 @@
     <script type=text/javascript>
       // nodeを定義
       var nodes = new vis.DataSet([
-        {id: 1, label: 'A'},
-        {id: 2, label: 'B'},
-        {id: 3, label: 'C'},
-        {id: 4, label: 'D'},
-        {id: 5, label: 'E'},
-        {id: 6, label: 'F'},
-        {id: 7, label: 'G'},
-        {id: 8, label: 'H'},
+        {id: 1, label: 'A', group: 1},
+        {id: 2, label: 'B', group: 1},
+        {id: 3, label: 'C', group: 1},
+        {id: 4, label: 'D', group: 1},
+        {id: 5, label: 'E', group: 2},
+        {id: 6, label: 'F', group: 2},
+        {id: 7, label: 'G', group: 2},
+        {id: 8, label: 'H', group: 2},
       ]);
       // 関連from - toを定義
       var edges = new vis.DataSet([
