太さを設定

--- a/sample_vis.html
+++ b/sample_vis.html
@@ -29,8 +29,8 @@
       ]);
       // 関連from - toを定義
       var edges = new vis.DataSet([
-        {from: 1, to: 2, arrows: 'to'},
-        {from: 1, to: 3, arrows: 'to'},
+        {from: 1, to: 2, arrows: 'to', width: 1},
+        {from: 1, to: 3, arrows: 'to', width: 5},
         {from: 3, to: 4, arrows: 'to'},
         {from: 6, to: 1, arrows: 'to'},
         {from: 7, to: 8, arrows: 'to'},
