nodeを大きくする

--- a/sample_vis.html
+++ b/sample_vis.html
@@ -18,7 +18,7 @@
     <script type=text/javascript>
       // nodeを定義
       var nodes = new vis.DataSet([
-        {id: 1, label: 'A', group: 1},
+        {id: 1, label: 'A', group: 1, value: 20, scaling: { label: { enabled: true } }},
         {id: 2, label: 'B', group: 1},
         {id: 3, label: 'C', group: 1},
         {id: 4, label: 'D', group: 1},
