node間の位置を調整する

--- a/sample_vis.html
+++ b/sample_vis.html
@@ -22,7 +22,7 @@
         {id: 2, label: 'B', group: 1},
         {id: 3, label: 'C', group: 1},
         {id: 4, label: 'D', group: 1},
-        {id: 5, label: 'E', group: 2},
+        {id: 5, label: 'E', group: 2, mass: 2},
         {id: 6, label: 'F', group: 2},
         {id: 7, label: 'G', group: 2},
         {id: 8, label: 'H', group: 2},
